scrollbar bug fix

--- a/css/main.css
+++ b/css/main.css
@@ -73,7 +73,7 @@
   left:15%;
   height:100%;
   width:15%;
-  z-index:1000;
+  //z-index:1000;
   background:rgba(0,0,0,0.8);
 }
 .event-list li
@@ -96,7 +96,7 @@
   background:#16a085;
   overflow:hidden;
   color:#212121;
-  z-index:250;
+  //z-index:250;
   text-align:center;
 }
 .description-space .heading{
@@ -124,5 +124,5 @@
 #competitions{
   width:95%;
   height:80%;
-  z-index:1000; 
+  //z-index:1000; 
 }
